k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service

          image: 375210270809.dkr.ecr.us-east-1.amazonaws.com/product-service:latest

          ports:
            - containerPort: 8080
