k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  type: LoadBalancer

  selector:
    app: product-service

  ports:
    - port: 80
      targetPort: 8080
